# squint

./: .gitignore  LICENSE  README.md  deploy.py  environment.yaml  pyproject.toml  train_squint.py  utils.py
deploy_utils/: manipulator.py  robot_config.py  tune_camera.py
deploy_utils/blender_stls/: bin.stl  can.stl  cube.stl  large_cube.stl
envs/: __init__.py  base_random_env.py  lift.py  place.py  reach.py  stack.py
envs/robot/: so100.py  so101.py  so101.srdf  so101.urdf
examples/: visualize_sim.py
results/: SO101LiftCan-v1.csv  SO101LiftCube-v1.csv  SO101PlaceCan-v1.csv  SO101PlaceCube-v1.csv  SO101ReachCan-v1.csv  SO101ReachCube-v1.csv  SO101StackCan-v1.csv  SO101StackCube-v1.csv
