[project]
name = "squint"
version = "0.1.0"
requires-python = ">=3.10, <3.11"
dependencies = [
    # Core ML
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tensordict==0.7.2",
    "torchrl==0.7.2",
    # Environment
    "mani-skill-nightly",
    "gymnasium",
    # Utilities
    "numpy",
    "tyro",
    "tqdm",
    "wandb",
    "opencv-python==4.12.0.88",
    # Deploy
    "lerobot[feetech]==0.4.3",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
