[project]
name = "squint"
version = "0.1.0"
requires-python = ">=3.10, <3.11"
dependencies = [
    # Core ML
    "torch==2.10.0",
    "torchvision==0.25.0",
    "tensordict==0.9.1",
    "torchrl==0.9.2",
    # Environment
    "mani-skill-nightly",
    "gymnasium",
    # Utilities
    "numpy",
    "tyro",
    "tqdm",
    "wandb",
    "opencv-python==4.12.0.88",
    # Deploy
    "lerobot[feetech]==0.4.4",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pillow-heif>=1.3.0",
]
